edited app theme, added internet permissions.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.shopmate">
+
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="shopmate"
+        android:label="ShopMate"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
