--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
@@ -25,12 +25,17 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+      sdk: flutter
+
+
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   http: ^1.1.0
   provider: ^6.0.5
-  intl: ^0.18.1
+  intl: ^0.18.0
   flutter_launcher_icons: ^0.13.1
+  mockito: ^5.4.2
 
 
 
@@ -52,7 +57,7 @@ dev_dependencies:
 
 
 flutter:
-
+  generate: true
 
   uses-material-design: true
 
